--- a/booki-RVU/index.html
+++ b/booki-RVU/index.html
@@ -309,7 +309,7 @@
                 </article>
                 <article class="card-activités">
                     <a href="#">
-                        <img src="./images/activites/paul-hermann.jpg" alt="Fort de Pomègues posé sur des rochers">
+                        <img src="./images/activites/paul-hermann.jpg" alt="Fort de Pomègues, rochers au premier plan">
                             <h3>Fort de Pomègues</h3>
                     </a>
                 </article>
@@ -323,7 +323,7 @@
                 <article class="card-activités">
                     <a href="#">
                     <img src="./images/activites/florian-wehde.jpg"
-                        alt="Notre-Dame-de-La-Garde, avec la ville au pied de la coline en premierr plan">
+                        alt="Notre-Dame-de-La-Garde, avec la ville au pied de la coline en premier plan">
                         <h3>Notre-Dame-de-la-Garde</h3>
                     </a>
                 </article>
