--- a/booki-RVU/index.html
+++ b/booki-RVU/index.html
@@ -332,7 +332,7 @@
 
         <footer>
 
-            <section>
+            <section>g_____________ju²_
                 <h4>à propos</h4>
                 <ul>
                     <li>
