Ajout des media queries pour la version mobile et tablette, ajustements du CSS.

--- a/booki-RVU/index.html
+++ b/booki-RVU/index.html
@@ -31,6 +31,7 @@
                         <a class="nav-activités" href="#Activités">Activités</a>
                     </li>
                 </ul>
+           
             </nav>
 
         <section class="info">   
@@ -38,45 +39,45 @@
             <p>En plein centre-ville ou en pleine nature</p>
 
             <form>
-                <i class="fa-solid fa-location-dot"></i>
+                <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
                 <input type="search" name="ville" id="ville" placeholder="Marseille, France ">
-                <button class="button-search" type="submit">
+                <button class="button-search" type="submit" aria-label="Rechercher"> 
                     <span class="button-search-text">Rechercher</span>
                     <i class="fa-solid fa-search button-icon"></i>
                 </button>
             </form>
 
             <section class="section-filters">
-                <p class="filtres">Filtres</p>
+               <p class="filtres">Filtres</p>
                 <ul>
                     <li>
                         <button class="button-filters">
-                            <i class="fa-solid fa-money-bill-wave"></i>
+                            <i class="fa-solid fa-money-bill-wave" aria-hidden="true"></i>
                             Economique
                         </button>
                     </li>
                     <li>
                         <button class="button-filters">
-                            <i class="fa-solid fa-person"></i>
+                            <i class="fa-solid fa-person" aria-hidden="true"></i>
                             Familial
                         </button>
                     </li>
                     <li>
                         <button class="button-filters">
-                            <i class="fa-solid fa-heart"></i>
+                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
                             Romantique
                         </button>
                     </li>
                     <li>
                         <button class="button-filters">
-                            <i class="fa-solid fa-fire"></i>
+                            <i class="fa-solid fa-fire" aria-hidden="true"></i>
                             Nos pépites
                         </button>
                     </li>
                 </ul>
-        </section>
+            </section>
             <div class="info-section">
-                <i class="fa-solid fa-circle-info"></i>
+                <i class="fa-solid fa-circle-info" aria-hidden="true"></i>
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
         </header>
@@ -88,8 +89,8 @@
                     <h2>Hébergements à Marseille</h2>
                     <div class="hebergements-cards">
                         <a href="#">
-                            <article class="card-hebergements">
-                                <img class="img-hebergements" src=".\images\hebergements\fred-kleber.jpg"
+                            <article class="card">
+                                <img src=".\images\hebergements\fred-kleber.jpg"
                                     alt="chambre de l'hôtel du port montrant les lits, une pièce très claire et une fenêtre ouverte">
 
                                 <div class="card-content">
@@ -110,9 +111,9 @@
                         </a>
 
                         <a href="#">
-                            <article class="card-hebergements">
+                            <article class="card">
 
-                                <img class="img-hebergements" src=".\images\hebergements\febrian-zakaria.jpg"
+                                <img src=".\images\hebergements\febrian-zakaria.jpg"
                                     alt="chambre de l'hôtel Chez Amina, montrant les lits, un bureau et une chaise en bois et la télé au mur, pièce très éclirée et fenêtre en fond">
 
                                 <div class="card-content">
@@ -133,9 +134,9 @@
                         </a>
 
                         <a href="#">
-                            <article class="card-hebergements">
+                            <article class="card">
 
-                                <img class="img-hebergements" src=".\images\hebergements\reisetopia.jpg"
+                                <img src=".\images\hebergements\reisetopia.jpg"
                                     alt="chambre de l'hôtel Les Mouettes montrant un lit, lumière tamisée, une armoire avec miroirs arrondis et table de chevet">
 
                                 <div class="card-content">
@@ -157,9 +158,9 @@
 
 
                         <a href="#">
-                            <article class="card-hebergements">
+                            <article class="card">
 
-                                <img class="img-hebergements" src=".\images\hebergements\annie-spratt.jpg"
+                                <img src=".\images\hebergements\annie-spratt.jpg"
                                     alt="chambre de l'hôtel de la Mer, montrant le lit, avec deux tables de chevet, un tableau de la mer accroché au dessus du lit, ambiance océane bleu et blanc">
 
                                 <div class="card-content">
@@ -180,9 +181,9 @@
                         </a>
 
                         <a href="#">
-                            <article class="card-hebergements">
+                            <article class="card">
 
-                                <img class="img-hebergements" src=".\images\hebergements\marcus-loke.jpg"
+                                <img src=".\images\hebergements\marcus-loke.jpg"
                                     alt="chambre de l'hôtel La Canebière montrant des lits super posé devant une fenêtre donnant sur la rue">
 
                                 <div class="card-content">
@@ -203,9 +204,9 @@
                         </a>
 
                         <a href="#">
-                            <article class="card-hebergements">
+                            <article class="card">
 
-                                <img class="img-hebergements" src=".\images\hebergements\nicate-lee.jpg"
+                                <img src=".\images\hebergements\nicate-lee.jpg"
                                     alt="chambre de l'hôtel de l'Auberge Le Panier, montrant plusieurs lits super posé en bois style bambou">
 
                                 <div class="card-content">
@@ -309,7 +310,6 @@
             <div class="activity-cards">
                 <article class="card-activity">
                     <a href="#"> 
-                        <!-- j'ai ajouté les  lien -->
                         <img src=".\images\activites\reno-laithienne.jpg"
                             alt="Vieux Port, bateaux dans le mport de Marseille">
                             <h3>Vieux-Port</h3>
