--- a/booki-RVU/index.html
+++ b/booki-RVU/index.html
@@ -51,26 +51,26 @@
                <p class="filtres">Filtres</p>
                 <ul>
                     <li>
-                        <button class="button-filters">
-                            <i class="fa-solid fa-money-bill-wave" aria-hidden="true"></i>
+                        <button class="button-filters" aria-label="Filtres les résultats pour les options économiques">
+                            <i class="fa-solid fa-money-bill-wave"></i>
                             Economique
                         </button>
                     </li>
                     <li>
-                        <button class="button-filters">
-                            <i class="fa-solid fa-person" aria-hidden="true"></i>
+                        <button class="button-filters" aria-label="Filtres les résultas pour les options de recherche pour les lieux pour les familles">
+                            <i class="fa-solid fa-person"></i>
                             Familial
                         </button>
                     </li>
                     <li>
-                        <button class="button-filters">
-                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                        <button class="button-filters" aria-label="filtres les résultats pour les options de recherche de lieux romantiques">
+                            <i class="fa-solid fa-heart"></i>
                             Romantique
                         </button>
                     </li>
                     <li>
-                        <button class="button-filters">
-                            <i class="fa-solid fa-fire" aria-hidden="true"></i>
+                        <button class="button-filters" aria-label="filtres les résultats pour les options des meilleurs lieux sélectionné pour vous">
+                            <i class="fa-solid fa-fire"></i>
                             Nos pépites
                         </button>
                     </li>
