correction de quelques erreurs dans le fichier html

--- a/booki-RVU/index.html
+++ b/booki-RVU/index.html
@@ -3,24 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Booki</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/styles-mobile.css">
-    <link rel="stylesheet" href="./styles/styles-tablette.css">
-    <link rel="icon" type="image/svg+xml" href="images\logo\Booki.png">
+    <link rel="stylesheet" href="./styles/style.css"/>
+    <link rel="stylesheet" href="./styles/styles-mobile.css"/>
+    <link rel="stylesheet" href="./styles/styles-tablette.css"/>
+    <link rel="icon" type="image/svg+xml" href="images/logo/Booki.png"/>
 </head>
 
 <body>
     <div class="main-container">
 
-        <header>
+    <header>
             <nav>
                 <img class="logo-img" src="images/logo/Booki.png" alt="logo entreprise booki" />
                 <ul>
@@ -76,11 +76,12 @@
                     </li>
                 </ul>
             </section>
+            </section>
             <div class="info-section">
                 <i class="fa-solid fa-circle-info" aria-hidden="true"></i>
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
-        </header>
+    </header>
 
         <main>
             <div class="hebergements-and-populaires">
@@ -90,8 +91,8 @@
                     <div class="hebergements-cards">
                         <a href="#">
                             <article class="card">
-                                <img src=".\images\hebergements\fred-kleber.jpg"
-                                    alt="chambre de l'hôtel du port montrant les lits, une pièce très claire et une fenêtre ouverte">
+                                <img src="./images/hebergements/fred-kleber.jpg"
+                                    alt="chambre de l'hôtel du port montrant les lits, une pièce très claire et une fenêtre ouverte"/>
 
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -113,7 +114,7 @@
                         <a href="#">
                             <article class="card">
 
-                                <img src=".\images\hebergements\febrian-zakaria.jpg"
+                                <img src="./images/hebergements/febrian-zakaria.jpg"
                                     alt="chambre de l'hôtel Chez Amina, montrant les lits, un bureau et une chaise en bois et la télé au mur, pièce très éclirée et fenêtre en fond">
 
                                 <div class="card-content">
@@ -136,7 +137,7 @@
                         <a href="#">
                             <article class="card">
 
-                                <img src=".\images\hebergements\reisetopia.jpg"
+                                <img src="./images/hebergements/reisetopia.jpg"
                                     alt="chambre de l'hôtel Les Mouettes montrant un lit, lumière tamisée, une armoire avec miroirs arrondis et table de chevet">
 
                                 <div class="card-content">
@@ -160,8 +161,8 @@
                         <a href="#">
                             <article class="card">
 
-                                <img src=".\images\hebergements\annie-spratt.jpg"
-                                    alt="chambre de l'hôtel de la Mer, montrant le lit, avec deux tables de chevet, un tableau de la mer accroché au dessus du lit, ambiance océane bleu et blanc">
+                                <img src="./images/hebergements/annie-spratt.jpg"
+                                    alt="chambre de l'hôtel de la Mer, montrant le lit, avec deux tables de chevet, un tableau de la mer accroché au dessus du lit, ambiance océane bleu et blanc"/>
 
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -183,8 +184,8 @@
                         <a href="#">
                             <article class="card">
 
-                                <img src=".\images\hebergements\marcus-loke.jpg"
-                                    alt="chambre de l'hôtel La Canebière montrant des lits super posé devant une fenêtre donnant sur la rue">
+                                <img src="./images/hebergements/marcus-loke.jpg"
+                                    alt="chambre de l'hôtel La Canebière montrant des lits super posé devant une fenêtre donnant sur la rue"/>
 
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -206,8 +207,8 @@
                         <a href="#">
                             <article class="card">
 
-                                <img src=".\images\hebergements\nicate-lee.jpg"
-                                    alt="chambre de l'hôtel de l'Auberge Le Panier, montrant plusieurs lits super posé en bois style bambou">
+                                <img src="./images/hebergements/nicate-lee.jpg"
+                                    alt="chambre de l'hôtel de l'Auberge Le Panier, montrant plusieurs lits super posé en bois style bambou"/>
 
                                 <div class="card-content">
                                     <div class="card-txt">
