--- a/booki-RVU/index.html
+++ b/booki-RVU/index.html
@@ -3,18 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booki</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles/style.css"/>
-    <link rel="stylesheet" href="./styles/styles-mobile.css"/>
-    <link rel="stylesheet" href="./styles/styles-tablette.css"/>
-    <link rel="icon" type="image/svg+xml" href="images/logo/Booki.png"/>
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/styles-mobile.css">
+    <link rel="stylesheet" href="./styles/styles-tablette.css">
+    <link rel="icon" type="image/svg+xml" href="images/logo/Booki.png">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
     <header>
             <nav>
-                <img class="logo-img" src="images/logo/Booki.png" alt="logo entreprise booki" />
+                <img class="logo-img" src="images/logo/Booki.png" alt="logo entreprise booki">
                 <ul>
                     <li id="barre-hebergements">
                         <a class="nav-hebergements" href="#Hébergements">Hébergements</a>
@@ -47,7 +47,7 @@
                 </button>
             </form>
 
-            <section class="section-filters">
+            <div class="section-filters">
                <p class="filtres">Filtres</p>
                 <ul>
                     <li>
@@ -75,10 +75,10 @@
                         </button>
                     </li>
                 </ul>
-            </section>
-            </section>
+            </div>
+        </section>
             <div class="info-section">
-                <i class="fa-solid fa-circle-info" aria-hidden="true"></i>
+                <i class="fa-solid fa-info" aria-hidden="true"></i>
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
     </header>
@@ -91,8 +91,7 @@
                     <div class="hebergements-cards">
                         <a href="#">
                             <article class="card">
-                                <img src="./images/hebergements/fred-kleber.jpg"
-                                    alt="chambre de l'hôtel du port montrant les lits, une pièce très claire et une fenêtre ouverte"/>
+                                <img src="./images/hebergements/fred-kleber.jpg" alt="chambre de l'hôtel du port montrant les lits, une pièce très claire et une fenêtre ouverte">
 
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -161,8 +160,7 @@
                         <a href="#">
                             <article class="card">
 
-                                <img src="./images/hebergements/annie-spratt.jpg"
-                                    alt="chambre de l'hôtel de la Mer, montrant le lit, avec deux tables de chevet, un tableau de la mer accroché au dessus du lit, ambiance océane bleu et blanc"/>
+                                <img src="./images/hebergements/annie-spratt.jpg" alt="chambre de l'hôtel de la Mer, montrant le lit, avec deux tables de chevet, un tableau de la mer accroché au dessus du lit, ambiance océane bleu et blanc">
 
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -184,8 +182,7 @@
                         <a href="#">
                             <article class="card">
 
-                                <img src="./images/hebergements/marcus-loke.jpg"
-                                    alt="chambre de l'hôtel La Canebière montrant des lits super posé devant une fenêtre donnant sur la rue"/>
+                                <img src="./images/hebergements/marcus-loke.jpg" alt="chambre de l'hôtel La Canebière montrant des lits super posé devant une fenêtre donnant sur la rue">
 
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -207,8 +204,7 @@
                         <a href="#">
                             <article class="card">
 
-                                <img src="./images/hebergements/nicate-lee.jpg"
-                                    alt="chambre de l'hôtel de l'Auberge Le Panier, montrant plusieurs lits super posé en bois style bambou"/>
+                                <img src="./images/hebergements/nicate-lee.jpg" alt="chambre de l'hôtel de l'Auberge Le Panier, montrant plusieurs lits super posé en bois style bambou">
 
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -227,15 +223,15 @@
                             </article>
                         </a>
                     </div>
-                    <div class="afficher-plus">
+                 <div class="afficher-plus">
                     <a href="#">
-                    <h3>Afficher plus
-                    </h3>
-                </a>  
+                      <h3>Afficher plus
+                      </h3>
+                    </a>  
                  </div>
-
+               
                 </section>
-
+            </div>
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
@@ -311,7 +307,7 @@
             <div class="activity-cards">
                 <article class="card-activity">
                     <a href="#"> 
-                        <img src=".\images\activites\reno-laithienne.jpg"
+                        <img src="./images/activites/reno-laithienne.jpg"
                             alt="Vieux Port, bateaux dans le mport de Marseille">
                             <h3>Vieux-Port</h3>
                     </a>
@@ -341,8 +337,9 @@
 
         <footer>
             <section class="section-footer">
-                <ul> 
                 <h4>A propos</h4>
+                <ul> 
+               
                     <li>
                         <a href="#">Fonctionnement de site</a>
                     </li>
@@ -356,8 +353,8 @@
             </section>
 
             <section class="section-footer">
-                <ul>
                 <h4>Nos hébergements</h4>
+                <ul>
                     <li>
                         <a href="#">Charte qualité</a>
                     </li>
@@ -367,8 +364,8 @@
                 </ul>
             </section>
             <section class="section-footer" >
-                <ul>
                 <h4>Assistance</h4>
+                <ul>
                     <li>
                         <a href="#">Centre d'aide</a>
                     </li>
